--- a/src/main/resources/WEB-INF/static/index.html
+++ b/src/main/resources/WEB-INF/static/index.html
@@ -2,13 +2,28 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title th:text="${#httpServletRequest.getRequestURI()}"></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-
 </head>
-<body>
-        <h1>Hello world</h1>
+
+<body th:if="${#httpServletRequest.getRequestURI().startsWith('/admin')}" th:style="display: none;">
+    <div th:replace="header :: header"></div>
+    <div class="content">
+        je suis content
+    </div>
+    <div th:replace="footer :: footer"></div>    
+</body>
+
+<body th:if="${#httpServletRequest.getRequestURI().startsWith('/admin')}">
+    <div th:replace="admin :: admin"></div>
+    <div th:replace="footer :: footer"></div>
 </body>
 </html>
